JumpScript/tests/baselines/reference/staticOffOfInstance1.errors.txt
tests/cases/compiler/staticOffOfInstance1.jump(3,10): error TS2339: Property 'Foo' does not exist on type 'List'.


==== tests/cases/compiler/staticOffOfInstance1.jump (1 errors) ====
    class List {
      public Blah() {
        this.Foo();
             ~~~
!!! error TS2339: Property 'Foo' does not exist on type 'List'.
      }
      public static Foo() {}
    }